tests/snapshots/snapshot__fixtures@m14__datalines.sas.snap
---
source: sas_interpreter/tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: sas_interpreter/tests/fixtures/m14/datalines.sas
---
==== LOG ====

1     data work.scores;
2       input name $ score;
3       datalines;
4     Alice 95
5     Bob 82
6     Carol 78
7     ;
8     run;
NOTE: The data set WORK.SCORES has 3 observations and 2 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

9     proc print data=work.scores;
10      title 'DATALINES list mode';
11    run;
NOTE: There were 3 observations read from the data set WORK.SCORES.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

12    data work.cols;
13      input name $ 1-5 score 7-9;
14      datalines;
15    Alice  95
16    Bob    82
17    Carol  78
18    ;
19    run;
NOTE: The data set WORK.COLS has 3 observations and 2 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

20    proc print data=work.cols;
21      title 'DATALINES column mode';
22    run;
NOTE: There were 3 observations read from the data set WORK.COLS.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

23    data work.missover;
24      infile datalines missover;
25      input a b c;
26      datalines;
27    1 2 3
28    4 5
29    7
30    ;
31    run;
NOTE: The data set WORK.MISSOVER has 3 observations and 3 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

32    proc print data=work.missover;
33      title 'MISSOVER — short lines fill with missing';
34    run;
NOTE: There were 3 observations read from the data set WORK.MISSOVER.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

==== LISTING ====
                                      DATALINES list mode

                                     Obs    name     score

                                       1    Alice       95
                                       2    Bob         82
                                       3    Carol       78

                                     DATALINES column mode

                                     Obs    name     score

                                       1    Alice       95
                                       2    Bob         82
                                       3    Carol       78

                         MISSOVER â short lines fill with missing

                                       Obs    a    b    c

                                         1    1    2    3
                                         2    4    5    .
                                         3    7    .    .

==== EXIT 0 ====
