tests/snapshots/snapshot__fixtures@m14__import_export.sas.snap
---
source: sas_interpreter/tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: sas_interpreter/tests/fixtures/m14/import_export.sas
---
==== LOG ====

1     libname d 'data';
NOTE: Libref D was successfully assigned as follows:
            Engine:        PARQUET
            Physical Name: data

2     data work.sub;
3       set d.class;
4       if age >= 14;
5       keep name age height;
6     run;
NOTE: There were 19 observations read from the data set D.CLASS.
NOTE: The data set WORK.SUB has 9 observations and 3 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

7     proc export data=work.sub
8       outfile='data/sub.csv'
9       dbms=csv
10      replace;
11    run;
NOTE: 9 records were written to the file 'data/sub.csv'.
NOTE: PROCEDURE EXPORT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

12    proc import datafile='data/sub.csv'
13      out=work.reimported
14      dbms=csv
15      replace;
16      getnames=yes;
17    run;
NOTE: The data set WORK.REIMPORTED has 9 observations and 3 variables.
NOTE: PROCEDURE IMPORT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

18    title 'Reimported from CSV (age >= 14 subset)';

19    proc print data=work.reimported;
20    run;
NOTE: There were 9 observations read from the data set WORK.REIMPORTED.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

==== LISTING ====
                             Reimported from CSV (age >= 14 subset)

                                Obs    name       age    height

                                  1    Alfred      14        69
                                  2    Carol       14      62.8
                                  3    Henry       14      63.5
                                  4    Janet       15      62.5
                                  5    Judy        14      64.3
                                  6    Mary        15      66.5
                                  7    Philip      16        72
                                  8    Ronald      15        67
                                  9    William     15      66.5

==== EXIT 0 ====
