tests/snapshots/snapshot__fixtures@m14__libname_csv.sas.snap
---
source: sas_interpreter/tests/snapshot.rs
assertion_line: 29
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: sas_interpreter/tests/fixtures/m14/libname_csv.sas
---
==== LOG ====

1     libname petlib csv 'data';
NOTE: Libref PETLIB was successfully assigned as follows:
            Engine:        CSV
            Physical Name: data

2     proc print data=petlib.pets;
3     run;
NOTE: There were 3 observations read from the data set PETLIB.PETS.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

==== LISTING ====
                                         The SAS System

                           Obs    name      species    age    weight

                             1    Rex       Dog          5      30.5
                             2    Felix     Cat          3       4.2
                             3    Tweety    Bird         1       0.1

==== EXIT 0 ====
