tests/snapshots/snapshot__fixtures@m14__read_csv.sas.snap
---
source: sas_interpreter/tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: sas_interpreter/tests/fixtures/m14/read_csv.sas
---
==== LOG ====

1     proc import datafile='data/pets.csv' out=work.pets dbms=csv replace;
2       getnames=yes;
3     run;
NOTE: The data set WORK.PETS has 3 observations and 4 variables.
NOTE: PROCEDURE IMPORT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

4     proc print data=work.pets;
5     run;
NOTE: There were 3 observations read from the data set WORK.PETS.
NOTE: PROCEDURE PRINT used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

==== LISTING ====
                                         The SAS System

                           Obs    name      species    age    weight

                             1    Rex       Dog          5      30.5
                             2    Felix     Cat          3       4.2
                             3    Tweety    Bird         1       0.1

==== EXIT 0 ====
